k8s/base/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vrs-app
  namespace: visitor-registration-system
  labels:
    app.kubernetes.io/name: visitor-registration-system
    app.kubernetes.io/component: app
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: visitor-registration-system
    app.kubernetes.io/component: app
