k8s/base/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vrs-postgres
  namespace: visitor-registration-system
  labels:
    app.kubernetes.io/name: visitor-registration-system
    app.kubernetes.io/component: postgres
spec:
  type: ClusterIP
  ports:
    - port: 5432
      targetPort: postgresql
      protocol: TCP
      name: postgresql
  selector:
    app.kubernetes.io/name: visitor-registration-system
    app.kubernetes.io/component: postgres
